--- a/Practics/Week2.ipynb
+++ b/Practics/Week2.ipynb
@@ -2490,7 +2490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b4396f3",
+   "id": "ffb68b36",
    "metadata": {},
    "source": [
     "# NETFLIX"
@@ -2499,7 +2499,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b007b2ae",
+   "id": "97ce8ea3",
    "metadata": {},
    "outputs": [
     {
@@ -2524,7 +2524,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3bb35c69",
+   "id": "2b886e91",
    "metadata": {},
    "outputs": [
     {
@@ -2635,7 +2635,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "132560c7",
+   "id": "27a575b0",
    "metadata": {},
    "outputs": [
     {
@@ -2660,7 +2660,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "580364fc",
+   "id": "94c5dcff",
    "metadata": {},
    "outputs": [
     {
@@ -2683,7 +2683,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "dade6c94",
+   "id": "e58795ab",
    "metadata": {},
    "outputs": [
     {
@@ -2838,7 +2838,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "108f6d6f",
+   "id": "14da0857",
    "metadata": {},
    "outputs": [
     {
@@ -2937,7 +2937,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a61e1456",
+   "id": "22be0bdb",
    "metadata": {},
    "outputs": [
     {
@@ -2961,7 +2961,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d552c626",
+   "id": "3fb76ac1",
    "metadata": {},
    "outputs": [
     {
@@ -3117,7 +3117,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d8083bbb",
+   "id": "d7898160",
    "metadata": {},
    "outputs": [
     {
@@ -3284,7 +3284,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e13d5978",
+   "id": "47956845",
    "metadata": {},
    "outputs": [
     {
@@ -3324,7 +3324,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2d15239a",
+   "id": "7b04645b",
    "metadata": {},
    "outputs": [
     {
@@ -3363,7 +3363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5347f3cd",
+   "id": "c1e63777",
    "metadata": {},
    "source": [
     "# Task 1"
@@ -3372,7 +3372,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "62d2223b",
+   "id": "d2ea041f",
    "metadata": {},
    "outputs": [
     {
@@ -3471,7 +3471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd6ab977",
+   "id": "19abc24c",
    "metadata": {},
    "source": [
     "# Task 2"
@@ -3480,7 +3480,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "63f488e2",
+   "id": "f382467e",
    "metadata": {},
    "outputs": [
     {
@@ -3631,7 +3631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a91a8c",
+   "id": "bfa2f0e9",
    "metadata": {},
    "source": [
     "# Task 3"
@@ -3640,7 +3640,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "455d32e6",
+   "id": "4c5def74",
    "metadata": {},
    "outputs": [
     {
@@ -3665,7 +3665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc23a954",
+   "id": "bd070d9b",
    "metadata": {},
    "source": [
     "# Task 4"
@@ -3674,7 +3674,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "0feecc76",
+   "id": "75a6c87b",
    "metadata": {},
    "outputs": [
     {
@@ -3697,7 +3697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "893dd49f",
+   "id": "86cff21e",
    "metadata": {},
    "source": [
     "# Task 5"
@@ -3706,7 +3706,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "feb9996c",
+   "id": "118d79cc",
    "metadata": {},
    "outputs": [
     {
@@ -3880,7 +3880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6c51d37",
+   "id": "2c0ef974",
    "metadata": {},
    "source": [
     "# Task 6"
@@ -3888,8 +3888,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "dbe92028",
+   "execution_count": 149,
+   "id": "4f0d404c",
    "metadata": {},
    "outputs": [
     {
@@ -4027,20 +4027,20 @@
        "[74 rows x 4 columns]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "netflix_country = netflix1620col_subset.groupby('country').count()\n",
-    "netflix_countrycol_subset = netflix_country[['title','genre','release_year','duration']]\n",
+    "netflix_country = netflix1620_col_subset.groupby('country').count()\n",
+    "# netflix_countrycol_subset = netflix_country[['title','genre','release_year','duration']]\n",
     "netflix_countrycol_subset"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1e477a1a",
+   "id": "8317929d",
    "metadata": {},
    "source": [
     "# Task 7"
@@ -4049,7 +4049,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "2dfde718",
+   "id": "dec7d34b",
    "metadata": {},
    "outputs": [
     {
@@ -4072,7 +4072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c19b7821",
+   "id": "8992bc95",
    "metadata": {},
    "source": [
     "# Task 8"
@@ -4081,7 +4081,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "2fb71351",
+   "id": "73099cce",
    "metadata": {},
    "outputs": [
     {
@@ -4103,7 +4103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15280a46",
+   "id": "dc24ef01",
    "metadata": {},
    "source": [
     "# Task 9"
@@ -4112,7 +4112,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "8931f479",
+   "id": "d90a847f",
    "metadata": {},
    "outputs": [
     {
@@ -4161,7 +4161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86681c3b",
+   "id": "bb0d5add",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4169,7 +4169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4080534f",
+   "id": "540ee052",
    "metadata": {},
    "outputs": [],
    "source": []
