--- a/Week12/W11 - Data Set/6511157_LuPhoneMaw_W11.ipynb
+++ b/Week12/W11 - Data Set/6511157_LuPhoneMaw_W11.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "631782ec",
    "metadata": {},
    "outputs": [
@@ -30,9 +30,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4j/bnvctt7152z6l5l6szd4m7wh0000gn/T/ipykernel_97515/1641907923.py:20: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "/var/folders/4j/bnvctt7152z6l5l6szd4m7wh0000gn/T/ipykernel_23995/1641907923.py:20: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  cc_apps_train.fillna(cc_apps_train.mean(), inplace=True)\n",
-      "/var/folders/4j/bnvctt7152z6l5l6szd4m7wh0000gn/T/ipykernel_97515/1641907923.py:21: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "/var/folders/4j/bnvctt7152z6l5l6szd4m7wh0000gn/T/ipykernel_23995/1641907923.py:21: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  cc_apps_test.fillna(cc_apps_train.mean(), inplace=True)\n",
       "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py:1143: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
@@ -45,7 +45,7 @@
        "       [  0, 125]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "id": "58df90a2",
    "metadata": {},
    "outputs": [],
@@ -152,164 +152,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "94139273",
+   "execution_count": 37,
+   "id": "7016a1a7",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/4j/bnvctt7152z6l5l6szd4m7wh0000gn/T/ipykernel_15132/479602246.py:23: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "  cc_apps_train.fillna(cc_apps_train.mean(), inplace=True)\n",
-      "/var/folders/4j/bnvctt7152z6l5l6szd4m7wh0000gn/T/ipykernel_15132/479602246.py:24: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "  cc_apps_test.fillna(cc_apps_train.mean(), inplace=True)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for k=1: 0.9210526315789473\n",
-      "Accuracy for k=2: 0.9078947368421053\n",
-      "Accuracy for k=3: 0.9298245614035088\n",
-      "Accuracy for k=4: 0.9254385964912281\n",
-      "Accuracy for k=5: 0.9254385964912281\n",
-      "Accuracy for k=6: 0.9210526315789473\n",
-      "Accuracy for k=7: 0.9166666666666666\n",
-      "Accuracy for k=8: 0.9122807017543859\n",
-      "Accuracy for k=9: 0.9122807017543859\n",
-      "Accuracy for k=10: 0.9166666666666666\n",
-      "Accuracy for k=11: 0.9166666666666666\n",
-      "Accuracy for k=12: 0.9166666666666666\n",
-      "Accuracy for k=13: 0.9210526315789473\n",
-      "Accuracy for k=14: 0.9254385964912281\n",
-      "Accuracy for k=15: 0.9254385964912281\n",
-      "Accuracy for k=16: 0.9298245614035088\n",
-      "Accuracy for k=17: 0.9342105263157895\n",
-      "Accuracy for k=18: 0.9342105263157895\n",
-      "Accuracy for k=19: 0.9385964912280702\n",
-      "Accuracy for k=20: 0.9298245614035088\n",
-      "Best k: 19\n",
-      "Best accuracy: 0.9385964912280702\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n",
-      "/Users/richard/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py:215: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n"
+      "K = 1: Accuracy = 0.9048153342683497\n",
+      "K = 2: Accuracy = 0.9090696587190275\n",
+      "K = 3: Accuracy = 0.9176718092566618\n",
+      "K = 4: Accuracy = 0.9111266947171576\n",
+      "K = 5: Accuracy = 0.9089294062646097\n",
+      "K = 6: Accuracy = 0.9089527816736792\n",
+      "K = 7: Accuracy = 0.9241701729780271\n",
+      "K = 8: Accuracy = 0.9285179990649837\n",
+      "K = 9: Accuracy = 0.9307152875175315\n",
+      "K = 10: Accuracy = 0.9307620383356708\n",
+      "K = 11: Accuracy = 0.926437587657784\n",
+      "K = 12: Accuracy = 0.9328892005610097\n",
+      "K = 13: Accuracy = 0.9329125759700794\n",
+      "K = 14: Accuracy = 0.9307386629266012\n",
+      "K = 15: Accuracy = 0.935063113604488\n",
+      "K = 16: Accuracy = 0.9328892005610099\n",
+      "K = 17: Accuracy = 0.9263674614305751\n",
+      "K = 18: Accuracy = 0.9242402992052361\n",
+      "K = 19: Accuracy = 0.9155913978494624\n",
+      "K = 20: Accuracy = 0.9112435717625058\n",
+      "\n",
+      "Best K value: 15\n",
+      "Best accuracy: 0.935063113604488\n",
+      "Confusion Matrix:\n",
+      " [[ 93  10]\n",
+      " [  7 118]]\n"
      ]
     }
    ],
    "source": [
-    "# Fill missing categorical values with the most frequent value\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "# Load the dataset\n",
-    "cc_apps = pd.read_csv(\"cc_approvals.data\", header=None)\n",
+    "# Create a KNeighborsClassifier\n",
+    "knn = KNeighborsClassifier()\n",
     "\n",
-    "# Drop the features 11 and 13\n",
-    "cc_apps = cc_apps.drop([11, 13], axis=1)\n",
+    "# Define a range of K values to try\n",
+    "param_grid = {'n_neighbors': range(1, 21)}  # Try K values from 1 to 20\n",
     "\n",
-    "# Split into train and test sets\n",
-    "cc_apps_train, cc_apps_test = train_test_split(cc_apps, test_size=0.33, random_state=42)\n",
+    "# Create a grid search using cross-validation\n",
+    "grid_search = GridSearchCV(estimator=knn, param_grid=param_grid, scoring='accuracy', cv=5)\n",
+    "grid_search.fit(rescaledX_train, y_train.ravel())  # Using ravel() to convert y_train to 1D array\n",
     "\n",
-    "# Replace the '?'s with NaN in the train and test sets\n",
-    "cc_apps_train = cc_apps_train.replace('?', np.NaN)\n",
-    "cc_apps_test = cc_apps_test.replace('?', np.NaN)\n",
+    "# Print accuracy for each K value\n",
+    "for params, accuracy in zip(grid_search.cv_results_['params'], grid_search.cv_results_['mean_test_score']):\n",
+    "    k = params['n_neighbors']\n",
+    "    print(f\"K = {k}: Accuracy = {accuracy}\")\n",
     "\n",
-    "# Fill NaN values with the mean of the training set\n",
-    "cc_apps_train.fillna(cc_apps_train.mean(), inplace=True)\n",
-    "cc_apps_test.fillna(cc_apps_train.mean(), inplace=True)\n",
+    "# Get the best K value and its corresponding accuracy\n",
+    "best_k = grid_search.best_params_['n_neighbors']\n",
+    "best_accuracy = grid_search.best_score_\n",
     "\n",
-    "# Fill missing categorical values with the most frequent value\n",
-    "for col in cc_apps_train.columns:\n",
-    "    if cc_apps_train[col].dtypes == 'object':\n",
-    "        cc_apps_train = cc_apps_train.fillna(cc_apps_train[col].value_counts().index[0])\n",
-    "        cc_apps_test = cc_apps_test.fillna(cc_apps_train[col].value_counts().index[0])\n",
+    "print(\"\\nBest K value:\", best_k)\n",
+    "print(\"Best accuracy:\", best_accuracy)\n",
     "\n",
-    "        \n",
-    "# Perform one-hot encoding on categorical features\n",
-    "cc_apps_train = pd.get_dummies(cc_apps_train)\n",
-    "cc_apps_test = pd.get_dummies(cc_apps_test)\n",
-    "# Make sure the test set has the same columns as the train set\n",
-    "cc_apps_test = cc_apps_test.reindex(columns=cc_apps_train.columns, fill_value=0)\n",
+    "# Create a KNeighborsClassifier with the best K value\n",
+    "best_knn = KNeighborsClassifier(n_neighbors=best_k)\n",
+    "best_knn.fit(rescaledX_train, y_train.ravel())\n",
     "\n",
-    "# Segregate features and labels into separate variables\n",
-    "X_train, y_train = cc_apps_train.iloc[:, :-1].values, cc_apps_train.iloc[:, [-1]].values\n",
-    "X_test, y_test = cc_apps_test.iloc[:, :-1].values, cc_apps_test.iloc[:, [-1]].values\n",
+    "# Use the best_knn to predict and calculate test accuracy\n",
+    "y_pred_test = best_knn.predict(rescaledX_test)\n",
+    "#test_accuracy = accuracy_score(y_test, y_pred_test)\n",
     "\n",
-    "# Instantiate MinMaxScaler and use it to rescale X_train and X_test\n",
-    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
-    "rescaledX_train = scaler.fit_transform(X_train)\n",
-    "rescaledX_test = scaler.transform(X_test)\n",
-    "\n",
-    "# Find the best value of 'k' using a loop\n",
-    "best_k = None\n",
-    "best_accuracy = 0\n",
-    "\n",
-    "for k in range(1, 21):  # Testing k values from 1 to 20\n",
-    "    knn = KNeighborsClassifier(n_neighbors=k)\n",
-    "    knn.fit(rescaledX_train, y_train)\n",
-    "    y_pred = knn.predict(rescaledX_test)\n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    \n",
-    "    print(f\"Accuracy for k={k}: {accuracy}\")\n",
-    "    \n",
-    "    if accuracy > best_accuracy:\n",
-    "        best_accuracy = accuracy\n",
-    "        best_k = k\n",
-    "\n",
-    "print(f\"Best k: {best_k}\")\n",
-    "print(f\"Best accuracy: {best_accuracy}\")\n",
-    "\n",
-    "\n",
-    "\n"
+    "#print(\"\\nTest accuracy with best K:\", test_accuracy)\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_test))"
    ]
   },
   {
@@ -322,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "d88852fa",
    "metadata": {},
    "outputs": [
@@ -340,7 +256,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4j/bnvctt7152z6l5l6szd4m7wh0000gn/T/ipykernel_97515/2160929429.py:13: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "/var/folders/4j/bnvctt7152z6l5l6szd4m7wh0000gn/T/ipykernel_23995/2160929429.py:13: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  cc_apps.fillna(cc_apps.mean(), inplace=True)\n"
      ]
     }
@@ -393,6 +309,22 @@
     "# Print the confusion matrix of the Logistic Regression model\n",
     "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a33232e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af814ce3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
