--- a/Week11/Untitled.ipynb
+++ b/Week11/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "153d979a",
    "metadata": {},
    "outputs": [
@@ -39,23 +39,31 @@
       "valence             127\n",
       "acousticness        178\n",
       "energy              178\n",
-      "dtype: int64\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_test_split' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/4j/bnvctt7152z6l5l6szd4m7wh0000gn/T/ipykernel_4569/3322919605.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m X_train_cat, X_test_cat, y_train, y_test = train_test_split(X_cat, y, test_size=0.3,\n\u001b[0m\u001b[1;32m     21\u001b[0m                                                             random_state = 12)\n\u001b[1;32m     22\u001b[0m X_train_num, X_test_num, y_train, y_test = train_test_split(X_num, y, test_size=0.3,\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_test_split' is not defined"
+      "dtype: int64\n",
+      "acousticness        0\n",
+      "danceability        0\n",
+      "duration_ms         0\n",
+      "energy              0\n",
+      "instrumentalness    0\n",
+      "liveness            0\n",
+      "loudness            0\n",
+      "speechiness         0\n",
+      "tempo               0\n",
+      "valence             0\n",
+      "genre               0\n",
+      "dtype: int64\n",
+      "0.011194029850746268\n"
      ]
     }
    ],
    "source": [
     "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score, KFold\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "import numpy as np\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -109,6 +117,7 @@
     "knn = KNeighborsClassifier(n_neighbors=5)\n",
     "knn.fit(X_train, y_train)\n",
     "y_pred = knn.predict(X_test)\n",
+    "\n",
     "print(knn.score(X_test, y_test))"
    ]
   },
